Actual code cleanup